# openclaw-rs

./: .dockerignore  .gitattributes  .gitignore  BENCHMARKS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.mcp  FFI.md  PARITY.md  PERFORMANCE.md  PROJECT-SUMMARY.md  QUICKREF.md  QUICKSTART.md  README.md  RELEASE-CHECKLIST.md  RELEASES.md  RUST_WORKSPACE_PLAN.md  SECURITY.md  SECURITY_AUDIT.md  clippy.toml  docker-compose.yml  mkdocs.yml  rustfmt.toml
.github/workflows/: ci.yml
configs/: anthropic.example.toml  gemini.example.toml  mock.toml  openai.example.toml
crates/api-client/: Cargo.toml
crates/api-client/benches/: chat_bench.rs
crates/api-client/src/: clients.rs  lib.rs  models.rs
crates/api-client/src/provider/: config.rs  mod.rs  resilience.rs  trait_def.rs
crates/api-client/src/provider/adapters/: anthropic.rs  mock.rs  mod.rs  openai.rs
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: cli.rs  commands.rs  config.rs  config_tests.rs  lib.rs  main.rs  repl.rs  ui.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs  test.rs
crates/harness/: Cargo.toml
crates/harness/src/: lib.rs
crates/i18n/: Cargo.toml
crates/i18n/locales/en/: messages.json
crates/i18n/locales/zh-CN/: messages.json
crates/i18n/src/: lib.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/examples/: full.rs
crates/mcp-server/src/: lib.rs
crates/mcp-server/tests/: integration_test.rs
crates/node-bridge/: Cargo.toml  build.rs  index.d.ts  index.js  package.json  test-bridge.js
crates/node-bridge/examples/: simple-chat.ts
crates/node-bridge/src/: lib.rs
crates/openclaw-core/: Cargo.toml
crates/openclaw-core/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: hook.rs  hot_reload.rs  lib.rs  loader.rs  plugin.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: hot.rs  lib.rs  registry.rs  telemetry.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: session_bench.rs
crates/runtime/src/: compression.rs  engine.rs  lib.rs  lsp.rs  lsp_tools.rs  orchestration.rs  persistence.rs  prompt.rs
crates/runtime/src/provider/: config.rs  factory.rs  mod.rs  trait_def.rs
crates/runtime/src/provider/adapters/: anthropic.rs  mock.rs  mod.rs  openai.rs
crates/tools/: Cargo.toml
crates/tools/src/: executor.rs  file_info.rs  health_tools.rs  http_tools.rs  image_tools.rs  json_store.rs  lib.rs  permissions.rs  text_tools.rs  tool.rs  validator.rs
crates/tools/tests/: integration.rs  integration_test.rs  unit_tests.rs
docs/: GETTING_STARTED.md  PHASE3_PLAN.md  TOOL_DEVELOPMENT.md  index.md  phase2-summary.md
docs/api/: SEMVER.md  overview.md  plugins.md  provider.md  runtime.md  tools.md
docs/getting-started/: configuration.md  first-project.md  installation.md
docs/guide/: configuration.md  getting-started.md  hot-reload.md  installation.md  persistence.md  plugins.md  providers.md  tools.md
docs/guides/: performance-troubleshooting.md
docs/guides/advanced/: custom-tools.md  plugin-development.md  session-management.md
docs/security/: AUDIT_CHECKLIST.md
examples/: Cargo.toml  README.md  example_01_session.rs  example_02_lsp.rs  example_03_runtime.rs  example_04_node_integration.js  example_05_complete_workflow.rs  example_06_mcp_client.rs  example_07_plugin_example.rs  example_08_http_client.rs  example_09_batch_processor.rs  example_10_mcp_server.rs  example_11_i18n.rs  lib.rs
examples/plugins/example-tool/: README.md  plugin.json
logs/repl/: repl-20260404T045800Z.md  repl-20260404T065559Z.md  repl-20260404T070219Z.md  repl-20260404T071938Z.md  repl-20260404T072022Z.md  repl-20260404T084813Z.md
scripts/: build-native.sh  check_api_stability.sh  generate_changelog.sh  generate_docs.sh  mcp_client_server_test.py  mcp_integration_test.py  mcp_server_e2e.py  validate_node_bindings.js
src/: types.rs
tests/: Cargo.toml
tests/benches/: session_bench.rs  tool_bench.rs
tests/src/: lib.rs
tests/src/common/: mod.rs
tests/tests/: test_mcp.rs  test_plugins.rs  test_session.rs  test_tools.rs
