[package]
name = "openclaw-examples"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "lib.rs"

[[example]]
name = "example_07_plugin_example"
path = "example_07_plugin_example.rs"

[[example]]
name = "example_08_http_client"
path = "example_08_http_client.rs"

[[example]]
name = "example_09_batch_processor"
path = "example_09_batch_processor.rs"

[[example]]
name = "example_10_mcp_server"
path = "example_10_mcp_server.rs"

[[example]]
name = "example_11_i18n"
path = "example_11_i18n.rs"

[dependencies]
runtime = { path = "../crates/runtime" }
tools = { path = "../crates/tools" }
plugins = { path = "../crates/plugins" }
openclaw-i18n = { path = "../crates/i18n" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
