[package]
name = "openclaw-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "session_bench"
harness = false

[[bench]]
name = "tool_bench"
harness = false
