[package]
name = "api-client"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
uuid.workspace = true
chrono.workspace = true
async-trait = "0.1.89"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "chat_bench"
harness = false
