[package]
name = "ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true, features = ["napi3"] }
napi-derive = { workspace = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
runtime = { path = "../runtime" }
tools = { path = "../tools" }
plugins = { path = "../plugins" }
api-client = { path = "../api-client" }

[build-dependencies]
napi-build = "2"