[package]
name = "openclaw-core"
version = "0.1.0"
edition = "2021"
description = "Core tool management for OpenClaw (shared between node-bridge and mcp-server)"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tools = { path = "../tools" }
