[package]
name = "openclaw-plugin"
version = "0.1.0"
edition = "2021"
description = "Plugin system with hook pipeline for OpenClaw"

[lib]
path = "src/lib.rs"

[dependencies]
tools = { path = "../tools" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
libloading = "0.8"
dashmap = "5.4"
notify = "6.1"

[dev-dependencies]
tracing-subscriber = "0.3"