[package]
name = "runtime"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { version = "1.10", features = ["v4"] }
chrono.workspace = true
reqwest = { version = "0.11" }
futures-util = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
api-client = { path = "../api-client" }
tools = { path = "../tools" }
harness = { path = "../harness" }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "session_bench"
harness = false