[package]
name = "tools"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64 = "0.21"
futures = "0.3"
pin-project = "1"
log = "0.4"
nix = { version = "0.28", features = ["user", "process", "sched", "resource"] }
seccompiler = "0.4"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"

[dev-dependencies]
tempfile = "3"